Added meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <meta name="description" content="My name is Tiago. I am in my late 20s and I’m originally from Lisbon, although I’m currently living in Slovenia. I work for Renaissance Periodization (RP) and I have my own coaching business where I help people with their training and fitness goals.">
+    <meta name="keywords" content="Tiago Faleiro, Tiago, Faleiro, Tiago Faleiro Fitness, Fitness">
+    <meta name="author" content="Tiago Faleiro">
+          <meta property="og:image" content="https://i.imgur.com/EO6yHJ1.png"/>
+          <meta property="image" content="https://i.imgur.com/EO6yHJ1.png"/>
+          <meta property="og:url" content="https://www.tiagofaleiro.com/"/>
+          <meta property="og:title" content="Tiago Faleiro's Website"/>
+           <meta property="og:description" content="My name is Tiago. I am in my late 20s and I’m originally from Lisbon, although I’m currently living in Slovenia. I work for Renaissance Periodization (RP) and I have my own coaching business where I help people with their training and fitness goals."/>
+
+          <!-- HTML Meta Tags -->
+          <meta name="description" content="My name is Tiago. I am in my late 20s and I’m originally from Lisbon, although I’m currently living in Slovenia. I work for Renaissance Periodization (RP) and I have my own coaching business where I help people with their training and fitness goals.">
+  
+          <!-- Facebook Meta Tags -->
+          <meta property="og:url" content="https://www.tiagofaleiro.com/">
+          <meta property="og:type" content="website">
+          <meta property="og:title" content="Tiago Faleiro's Website">
+          <meta property="og:description" content="My name is Tiago. I am in my late 20s and I’m originally from Lisbon, although I’m currently living in Slovenia. I work for Renaissance Periodization (RP) and I have my own coaching business where I help people with their training and fitness goals.">
+          <meta property="og:image" content="https://i.imgur.com/EO6yHJ1.png">
+  
+          <!-- Twitter Meta Tags -->
+          <meta property="twitter:url" content="https://www.tiagofaleiro.com/">
+          <meta name="twitter:card" content="https://i.imgur.com/EO6yHJ1.png">
+          <meta name="twitter:title" content="Tiago Faleiro's Website">
+          <meta name="twitter:description" content="My name is Tiago. I am in my late 20s and I’m originally from Lisbon, although I’m currently living in Slovenia. I work for Renaissance Periodization (RP) and I have my own coaching business where I help people with their training and fitness goals.">
+          <meta name="twitter:image" content="https://i.imgur.com/EO6yHJ1.png">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiago Faleiro</title>
