--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="header">
         <nav>
         <div class="logo">
-            <h3>TIAGO FALERIO</h3>
+            <h3>TIAGO FALEIRO</h3>
         </div>
         <ul id="menu-1">
             <li><a href="#">HOME</a></li>
@@ -126,10 +126,11 @@
             <div id="services-q">
                 <h4>WHO I CANNOT HELP?</h4>
                 <ul id="tlist">
-                    <li><p>‣ Are trying to get better at any particular sport besides powerlifting or bodybuilding.<br><br></p></li>
-                    <li><p>‣ Have any medical conditions, such as PCOS, hypothyroidism, eating disorders, or anything else.<br><br></p></li>
-                    <li><p>‣ I also don’t work with pregnant or breastfeeding women, people who are using performance-enhancing drugs or people under 18 years old.<br><br></p></li>
-                    <li><p>‣ If you are in any category that doesn’t allow us to work together, if you email me I can recommend some good coaches that can likely help you in your situation.</p></li>
+                    <li><p>‣ Are trying to get better at any particular sport besides powerlifting or bodybuilding (e.g. soccer)<br><br></p></li>
+                    <li><p>‣ Have any medical conditions, such as PCOS, hypothyroidism, eating disorders, etc.<br><br></p></li>
+                    <li><p>‣ Pregnant or breastfeeding women<br><br></p></li>
+                    <li><p>‣ People who are using performance-enhancing drugs or people under 18 years old.<br><br></p></li>
+                    <li><p>‣ If you are in any category that doesn’t allow us to work together, if you email me I can recommend some good coaches that can help you.</p></li>
                 </ul>
             </div>
             <div id="d-line"></div>
