--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
             <div class="swiper-slide">
                 <div id="tvideo3">
                     <div id="tvideo3info">
-                        <p>Eric, Personal Trainer & Gym Owner, USA</p>
+                        <p>Michael, 30, Communications (Switzerland)</p>
                     </div>
-                    <iframe src="https://player.vimeo.com/video/559077470?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" height="380" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Eric Testimonial"></iframe>
+                    <iframe src="https://player.vimeo.com/video/592187064?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" height="380" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Eric Testimonial"></iframe>
                     
                 </div>
             </div>
