--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
             <div class="swiper-slide">
                 <div id="tvideo3">
                     <div id="tvideo3info">
-                        <p>Lawrence, Bank Analyst (USA)</p>
+                        <p>Eric, Trainer and Gym Owner (USA)</p>
                     </div>
-                    <iframe src="https://player.vimeo.com/video/592214304?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" height="380" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Eric Testimonial"></iframe>
+                    <iframe src="https://player.vimeo.com/video/592195342?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" height="380" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Eric Testimonial"></iframe>
                     
                 </div>
             </div>
@@ -269,9 +269,9 @@
             <div class="swiper-slide">
                 <div id="tvideo3">
                     <div id="tvideo3info">
-                        <p>Christian, Gym Owner and Personal Trainer (Spain)</p>
+                        <p>Lawrence, Bank Analyst (USA)</p>
                     </div>
-                    <iframe src="https://player.vimeo.com/video/592200753?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" height="380" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Eric Testimonial"></iframe>
+                    <iframe src="https://player.vimeo.com/video/592214304?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" height="380" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Eric Testimonial"></iframe>
                     
                 </div>
             </div>
