--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <div class="swiper-slide">
                 <div id="tvideo3">
                     <div id="tvideo3info">
-                        <p>Christian, Gym Owner and Personal Trainer (Spain)</p>
+                        <p>Christian, Trainer and Gym Owner (Spain)</p>
                     </div>
                     <iframe src="https://player.vimeo.com/video/592200753?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" height="380" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Eric Testimonial"></iframe>
                     
