--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </h4>
             <div id="benefits-text">
                 <h5>ADVICE</h5>
-                <p>Nowadays you can search for anything on the internet, but without a solid foundation of knowledge, it’s incredibly hard to know what is good information.<br>
+                <p>Nowadays you can search for anything on the internet, but without a solid foundation of knowledge, it’s incredibly hard to know what is good information.<br><br>
 
                     What foods should you eat? How many calories do you need? How much training volume should you do? Are you doing too much or too little? How should your training be structured? How do you overcome plateaus?<br>
                     
