--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <h5>ADVICE</h5>
                 <p>Nowadays you can search for anything on the internet, but without a solid foundation of knowledge, it’s incredibly hard to know what is good information.<br><br>
 
-                    How much protein do you need? Is saturated fat bad for you? How many sets should you do? What type of training structure should you follow? Linear periodization? undulating periodization? block periodization? It's a nightmare!<br><br>
+                    How much protein do you need? Is saturated fat bad for you? How many sets should you do? What type of training structure should you follow? Linear periodization? Undulating periodization? Block periodization? It's a nightmare!<br><br>
                     
                     These questions aren’t easy to answer unless you have experience and knowledge, and searching online will give you countless contradictory answers. A good coach can tell you exactly what you need to do and also the reason behind it. You don’t have to constantly be worried about what is legitimate or not.<br><br>
  
@@ -176,6 +176,10 @@
                     </p>
                 <div id="advice-imagebox">
                     <img src="images/Adviceimage.jpg" id="advice-image"></div>
+                <p>  While you can learn this on your own, why would you? These are some of the fitness books I have read over the years. This isn't even all of them, not to mention ebooks and journal articles. You can also read them and understand training and nutrition a lot better, but you will spend hundreds or thousands of hours doing so.<br><br>
+                    
+                    I could have built this website myself, but it would likewise require many hours of learning and trial and error. Instead, I paid a webdesigner to do it. It is much easier and saves me a lot of time and effort. I don't care about being a webdesigning expert, just like most people don't care about becoming a fitness expert. They just want to achieve their fitness goals, very much just like I wanted a website.<br><br>
+                    </p>
 
                 <h5>ACCOUNTABILITY</h5>
                 <p>Most people fail because they simply stop doing what’s necessary to produce the result they want, even if they know what they should do.<br>
