--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta name="description" content="My name is Tiago. I am in my late 20s and I’m originally from Lisbon, although I’m currently living in Slovenia. I work for Renaissance Periodization (RP) and I have my own coaching business where I help people with their training and fitness goals.">
+    <meta name="description" content="My name is Tiago. I am in my late 20s and I live in Slovenia. I work for Renaissance Periodization (RP) and I have my own coaching business where I help people with their training and fitness goals.">
     <meta name="keywords" content="Tiago Faleiro, Tiago, Faleiro, Tiago Faleiro Fitness, Fitness">
     <meta name="author" content="Tiago Faleiro">
           <meta property="og:image" content="https://i.imgur.com/EO6yHJ1.png"/>
