--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
                 if you want to discuss any aspect of your diet or training more in-depth.</p>
             <p>With the silver package, the contact is more limited. You also have a scheduled check-in, but it's
                 monthly instead of weekly. The plan is changed monthly rather than weekly, and the contact is done by
-                email.</p>
+                email. There is no video call beyond the initial assessment call. </p>
             <p>The difference is how much guidance you need. If you struggle with accountability, as most people do, the
                 gold package is preferred. But if you mostly want to get a solid training and diet program to follow, or
                 if your budget is limited,
@@ -819,8 +819,7 @@
 
         <div id="pricing-text">
             <div id="prtext">
-                <p>These rates are in US Dollars. For a different currency, they would be adjusted to reflect the
-                    currency difference. <br><br> There are a few situations that grant a discount: <br><br> ○
+                <p>There are a few situations that grant a discount: <br><br> ○
                     Clients that have worked with me for longer than
                     1 year get 10% off <br> ○ Students get a 20% discount.<br> ○ Referrals or double-sign ups get a
                     20% discount for both parties.<br><br> The coaching booklet refers to a physical book that all
