--- a/vitor/index.html
+++ b/vitor/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Vitor</title>
-<meta http-equiv="refresh" content="0; URL=https://www.youtube.com/playlist?list=PLvK21f9ms2rA3WBXMOKPdwXRae-RGLppa/">
-<link rel="canonical" href="https://www.youtube.com/playlist?list=PLvK21f9ms2rA3WBXMOKPdwXRae-RGLppa/">
+<meta http-equiv="refresh" content="0; URL=https://youtube.com/playlist?list=PLvK21f9ms2rA3WBXMOKPdwXRae-RGLppa/">
+<link rel="canonical" href="https://youtube.com/playlist?list=PLvK21f9ms2rA3WBXMOKPdwXRae-RGLppa/">
