--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                         <li class="active"><span>✓</span>INDIVIDUALIZED FOR YOUR NEEDS</li>
                         <li class="active"><span>✓</span>INITIAL 1 ON 1 VIDEO-CALL</li>
                         <li class="active"><span>✓</span>COACHING BOOKLET</li>
-                        <li class="activeRed"><span>✗</span>MONTHLY 1 ON 1 VIDEO CALL</li>
+                        <li class="activeRed"><span>✗</span><i>MONTHLY</i> 1 ON 1 VIDEO CALL</li>
                         <li class="active"><span>✓</span>MONTHLY PLAN ADJUSTMENTS</li>
                         <li class="active"><span>✓</span>MONTHLY SCHEDULED CHECK-INS</li>
                         <li class="active"><span>✓</span>WEEKLY COMMUNICATION (Whatsapp/Messenger)</li>
