--- a/index.html
+++ b/index.html
@@ -620,9 +620,9 @@
                         <li class="active"><span>✓</span>INITIAL 1 ON 1 VIDEO-CALL</li>
                         <li class="active"><span>✓</span>COACHING BOOKLET</li>
                         <li class="active"><span>✓</span>MONTHLY 1 ON 1 VIDEO CALL</li>
-                        <li class="active"><span>✓</span>WEEKLY PLAN ADJUSTMENTS</li>
-                        <li class="active"><span>✓</span>WEEKLY SCHEDULED CHECK-INS</li>
-                        <li class="active"><span>✓</span>DAILY COMMUNICATION (Whatsapp/Messenger)</li>
+                        <li class="active"><span>✓</span><i>WEEKLY</i> PLAN ADJUSTMENTS</li>
+                        <li class="active"><span>✓</span><i>WEEKLY</i> SCHEDULED CHECK-INS</li>
+                        <li class="active"><span>✓</span><i>DAILY</i> COMMUNICATION (Whatsapp/Messenger)</li>
                     </div>
                 </div>
             </div>
@@ -649,10 +649,10 @@
                         <li class="active"><span>✓</span>INDIVIDUALIZED FOR YOUR NEEDS</li>
                         <li class="active"><span>✓</span>INITIAL 1 ON 1 VIDEO-CALL</li>
                         <li class="active"><span>✓</span>COACHING BOOKLET</li>
-                        <li class="activeRed"><span>✗</span><i>MONTHLY</i> 1 ON 1 VIDEO CALL</li>
-                        <li class="active"><span>✓</span>MONTHLY PLAN ADJUSTMENTS</li>
-                        <li class="active"><span>✓</span>MONTHLY SCHEDULED CHECK-INS</li>
-                        <li class="active"><span>✓</span>WEEKLY COMMUNICATION (Whatsapp/Messenger)</li>
+                        <li class="activeRed"><span>✗</span>MONTHLY 1 ON 1 VIDEO CALL</li>
+                        <li class="active"><span>✓</span><i>MONTHLY</i> PLAN ADJUSTMENTS</li>
+                        <li class="active"><span>✓</span><i>MONTHLY</i> SCHEDULED CHECK-INS</li>
+                        <li class="active"><span>✓</span><i>WEEKLY</i> COMMUNICATION (Email)</li>
 
                         <!-- <li ><span>✓</span>MONTHLY PLAN ADJUSTMENTS</li>
                         <li ><span>✓</span>MONTHLY SCHEDULED CHECK-INS</li>
@@ -685,9 +685,9 @@
                         <li class="active"><span>✓</span>INITIAL 1 ON 1 VIDEO-CALL</li>
                         <li class="active"><span>✓</span>COACHING BOOKLET</li>
                         <li class="active"><span>✓</span>MONTHLY 1 ON 1 VIDEO CALL</li>
-                        <li class="active"><span>✓</span>WEEKLY PLAN ADJUSTMENTS</li>
-                        <li class="active"><span>✓</span>WEEKLY SCHEDULED CHECK-INS</li>
-                        <li class="active"><span>✓</span>DAILY COMMUNICATION (Whatsapp/Messenger)</li>
+                        <li class="active"><span>✓</span><i>WEEKLY</i> PLAN ADJUSTMENTS</li>
+                        <li class="active"><span>✓</span><i>WEEKLY</i> SCHEDULED CHECK-INS</li>
+                        <li class="active"><span>✓</span><i>DAILY</i> COMMUNICATION (Whatsapp/Messenger)</li>
                     </div>
                 </div>
             </div>
@@ -715,9 +715,9 @@
                         <li class="active"><span>✓</span>INITIAL 1 ON 1 VIDEO-CALL</li>
                         <li class="active"><span>✓</span>COACHING BOOKLET</li>
                         <li class="activeRed"><span>✗</span>MONTHLY 1 ON 1 VIDEO CALL</li>
-                        <li class="active"><span>✓</span>MONTHLY PLAN ADJUSTMENTS</li>
-                        <li class="active"><span>✓</span>MONTHLY SCHEDULED CHECK-INS</li>
-                        <li class="active"><span>✓</span>WEEKLY COMMUNICATION (Whatsapp/Messenger)</li>
+                        <li class="active"><span>✓</span><i>MONTHLY</i> PLAN ADJUSTMENTS</li>
+                        <li class="active"><span>✓</span><i>MONTHLY</i> SCHEDULED CHECK-INS</li>
+                        <li class="active"><span>✓</span><i>WEEKLY</i> COMMUNICATION (Email)</li>
                     </div>
                 </div>
             </div>
@@ -746,9 +746,9 @@
                         <li class="active"><span>✓</span>INITIAL 1 ON 1 VIDEO-CALL</li>
                         <li class="active"><span>✓</span>COACHING BOOKLET</li>
                         <li class="active"><span>✓</span>MONTHLY 1 ON 1 VIDEO CALL</li>
-                        <li class="active"><span>✓</span>WEEKLY PLAN ADJUSTMENTS</li>
-                        <li class="active"><span>✓</span>WEEKLY SCHEDULED CHECK-INS</li>
-                        <li class="active"><span>✓</span>DAILY COMMUNICATION (Whatsapp/Messenger)</li>
+                        <li class="active"><span>✓</span><i>WEEKLY</i> PLAN ADJUSTMENTS</li>
+                        <li class="active"><span>✓</span<i>>WEEKLY</i> SCHEDULED CHECK-INS</li>
+                        <li class="active"><span>✓</span><i>DAILY</i> COMMUNICATION (Whatsapp/Messenger)</li>
                     </div>
                 </div>
             </div>
@@ -776,9 +776,9 @@
                         <li class="active"><span>✓</span>INITIAL 1 ON 1 VIDEO-CALL</li>
                         <li class="active"><span>✓</span>COACHING BOOKLET</li>
                         <li class="activeRed"><span>✗</span>MONTHLY 1 ON 1 VIDEO CALL</li>
-                        <li class="active"><span>✓</span>MONTHLY PLAN ADJUSTMENTS</li>
-                        <li class="active"><span>✓</span>MONTHLY SCHEDULED CHECK-INS</li>
-                        <li class="active"><span>✓</span>WEEKLY COMMUNICATION (Whatsapp/Messenger)</li>
+                        <li class="active"><span>✓</span><i>MONTHL</i>Y PLAN ADJUSTMENTS</li>
+                        <li class="active"><span>✓</span><i>MONTHLY</i> SCHEDULED CHECK-INS</li>
+                        <li class="active"><span>✓</span><i>WEEKLY</i> COMMUNICATION (Email)</li>
                     </div>
                 </div>
             </div>
