--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                    <a href="https://www.losefatbuildmuscle.co/why-youre-not-losing-weight-an-interview-with-tiago-vasconcelos-faleiro/"
+                    <a href="https://www.youtube.com/watch?v=YvPxyhMgLQg/"
                        target="_blank">
                         <div id="tvideo2">
                             <img src="images/3.png" alt="">
