--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
                         <li class="active"><span>✓</span>COACHING BOOKLET</li>
                         <li class="active"><span>✓</span>MONTHLY 1 ON 1 VIDEO CALL</li>
                         <li class="active"><span>✓</span><i>WEEKLY</i> PLAN ADJUSTMENTS</li>
-                        <li class="active"><span>✓</span<i>>WEEKLY</i> SCHEDULED CHECK-INS</li>
+                        <li class="active"><span>✓</span<i>WEEKLY</i> SCHEDULED CHECK-INS</li>
                         <li class="active"><span>✓</span><i>DAILY</i> COMMUNICATION (Whatsapp/Messenger)</li>
                     </div>
                 </div>
