--- a/index.html
+++ b/index.html
@@ -821,8 +821,8 @@
             <div id="prtext">
                 <p>There are a few situations that grant a discount: <br><br> ○
                     Clients that have worked with me for longer than
-                    1 year get 10% off <br> ○ Students get a 20% discount.<br> ○ Referrals or double-sign ups get a
-                    20% discount for both parties.<br><br> The coaching booklet refers to a physical book that all
+                    1 year get 5% off <br> ○ Referrals or double-sign ups get a
+                    15% discount for both parties (30% total).<br><br> The coaching booklet refers to a physical book that all
                     my clients get. I wrote it myself and
                     only my clients have access. This started as a private page on my website, but it got so big
                     that I figured a book would be more suitable. <br><br> You will have it shipped to your door
