--- a/paypal/index.html
+++ b/paypal/index.html
@@ -1,1 +1,5 @@
-
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>PayPal</title>
+<meta http-equiv="refresh" content="0; URL=https://www.paypal.com/paypalme/tiagofaleiro">
+<link rel="canonical" href="https://www.paypal.com/paypalme/tiagofaleiro">
